@@ -4,6 +4,7 @@
                   actor_email python:options['actor_email'];
                   recipient_to_email python:options['recipient_to_email'];
                   recipient_to_name python:options['recipient_to_name'];
+                  reviewer_name python:options['reviewer_name'];
                   username python:options['username'];
                   password python:options['password'];
                   portal_url python:options['portal_url'];
@@ -13,7 +14,7 @@
 To: <span tal:replace="recipient_to_email" />
 Subject: <span i18n:domain="cooptation" i18n:translate="cooptation_password_subject" tal:omit-tag="">Creation of your account</span>
 Reply-to: "<span tal:replace="actor_fullname" />" <span tal:replace="structure lt"/><span tal:replace="actor_email" /><span tal:replace="structure gt"/>
-Content-Type: text/plain; charset=<span tal:replace="context/email_charset|context/portal_properties/site_properties/default_charset|string:utf-8" />
+Content-Type: text/plain; charset=utf-8
 
 <div i18n:domain="cooptation"
      i18n:translate="hello"
@@ -24,8 +25,11 @@ Hello <span i18n:name="recipient_to_name" tal:replace="recipient_to_name" />,</d
      i18n:translate="cooptation_password_body1"
      tal:omit-tag="">
      Your user account has been created on
-     <tal:block i18n:name="sitename" content="portal/Title" />.
+     <tal:block i18n:name="sitename" content="portal/Title" />
+      at the request of <span i18n:name="reviewer_name" tal:replace="reviewer_name" />.
 </div>
+
+<div tal:replace="context/getWelcomeMsg|nothing" />
 
 <div i18n:domain="cooptation"
      i18n:translate="cooptation_password_body2"
@@ -49,8 +53,8 @@ Please log in to <span i18n:name="url" tal:replace="portal_url" />
      tal:define="workspace context/getWorkspace"
      tal:condition="workspace"
      tal:omit-tag="">
-You have the role <span i18n:name="role" i18n:domain="plone" i18n:translate="" tal:replace="context/getRole" /> on the following workspace:
-<span i18n:name="workspace_url" tal:replace="workspace/absolute_url" /></div><tal:macro
+You have the role <span i18n:name="role" i18n:domain="plone" i18n:translate="" tal:replace="context/getRole" /> on the workspace
+"<span i18n:name="workspace_title" tal:replace="workspace/Title" />" available at this url: <span i18n:name="workspace_url" tal:replace="workspace/absolute_url" /></div><tal:macro
       tal:define="macros here/cooptation_macros/macros | nothing;
                   bottom_macro macros/password_notification_bottom | nothing"
       tal:condition="bottom_macro">
